--- a/index.html
+++ b/index.html
@@ -108,15 +108,9 @@
 
 			<!-- HERO
 			================================= -->
-			<section id="hero" class="hero-section hero-layout-classic hero-layout-video-and-features-cta section section-dark" style="padding: 100px 0;">
+			<section id="hero" class="hero-section hero-layout-classic hero-layout-video-and-features-cta section section-dark" style="padding: 100px 0;background-image: url('images/backgrounds/motif2018.jpg'); background-position: center; background-repeat: no-repeat; background-size: cover;">
 
 				<div class="section-background">
-
-					<!-- IMAGE BACKGROUND -->
-					<div class="section-background-image parallax" data-stellar-ratio="0.4">
-						<img src="images/backgrounds/motif2017.png" alt="" style="opacity: 0.35;">
-					</div>
-
 					<!-- VIDEO BACKGROUND -->
 					<!-- <div class="section-background-video section-background-dot-overlay parallax" data-stellar-ratio="0.4">
 						<video preload="auto" autoplay loop muted poster="images/backgrounds/video-fallback-bg.jpg" style="opacity: 0.3;">
