update background and add english version for proofreading

--- a/index.html
+++ b/index.html
@@ -92,6 +92,10 @@
 							<!--<li class="header-action-button"><a target="_blank" href="https://www.eventbrite.fr/e/billets-hacking-industry-camp-2017-36489834076" class="btn btn-primary">S'inscrire</a></li>-->
 							<li class="header-action-button"><a target="_blank" href="http://hic2018.sparkboard.com" class="btn btn-primary">Les défis</a></li>
 							<li class="header-action-button"><a target="_blank" href="http://2017.hackingindustry.camp" class="btn btn-primary">Édition 2017</a></li>
+							<!--<a href="#" class="dropdown-toggle external" data-toggle="dropdown" role="button" aria-expanded="false">FR <span class="caret"></span></a>
+							<ul class="dropdown-menu" role="menu">
+								<li><a href="/en/">EN</a></li>
+							</ul>-->
 						</ul>
 
 					</nav>
@@ -207,7 +211,7 @@
 									</div>
 									<!--<img src="images/contents/amphi2.jpg" style="width: 100%" alt="hacking industry camp 2017">-->
 
-									<p class="lead"> <strong>54h pour stimuler l'innovation</strong> <br>La troisième édition du Hackathon dédié à l'Industrie en Alsace <br>54h pour innover et inventer l'industrie 4.0
+									<p class="lead"> <strong>54h pour stimuler l'innovation</strong> <br>La quatrième édition du Hackathon dédié à l'Industrie en Alsace <br>54h pour innover et inventer l'industrie 4.0
 									<span style="font-style: normal;font-size: 17px; padding-top: 6px;"><br>
 										<strong>Jetez un coup d'oeil aux éditions précédentes : </strong> 
 										<a href="http://2017.hackingindustry.camp/" target="_blank">2017</a> - 
@@ -471,7 +475,7 @@
 													<!-- TESTIMONIAL ITEM 4 -->
 													<div class="testimonial-slide">
 														<blockquote class="testimonial-quote">
-															<p>Des prévisions réalisées par Cisco indiquent que d’ici 2022, l’Internet des Objets générera 14,4 000 milliards de dollars en bénéfices et revenus. Une autre étude de General Electric publiée en novembre 2012 conclut que les gains en efficacité et productivité induits par un système industriel digitalisé rejailliront sur tous les secteurs économiques d’ici 2025, impactant approximativement une moitié de l’économie globale.</p>
+															<p>Des prévisions réalisées par Cisco indiquent que d’ici 2022, l’Internet des Objets générera 14 400 milliards de dollars en bénéfices et revenus. Une autre étude de General Electric publiée en novembre 2012 conclut que les gains en efficacité et productivité induits par un système industriel digitalisé rejailliront sur tous les secteurs économiques d’ici 2025, impactant approximativement une moitié de l’économie globale.</p>
 														</blockquote>
 														<cite class="testimonial-cite">Jeremy Rifkin, Economiste</cite>
 													</div>
@@ -1331,7 +1335,7 @@
 							<div class="faq-item">
 								<span class="faq-item-icon fa fa-question-circle"></span>
 								<h4 class="faq-item-heading">Quel matériel ?</h4>
-								<div class="faq-item-text">Chacun ramène son PC et si possible une multiprise.<br><br><strong>Nos partenaires mettent à disposition un kit technique</strong> : <br> - l'INSA permet l'accès à son FabLab.<br>- La startup Strataggem propose l'accès à la plateforme LoRa Wavebricks, a du matériel électronique pour réaliser des objets connectés et du coaching durant le week-end.<br>- ITS Future et AGORA CALYCE mettent à disposition la plateforme cloud IoT Agora.<br> - Scalingo vous permettra d'héberger vos applications web !</div>
+								<div class="faq-item-text">Chacun ramène son PC et si possible une multiprise.<br><br><!--<strong>Nos partenaires mettent à disposition un kit technique</strong> : <br> - l'INSA permet l'accès à son FabLab.<br>- La startup Strataggem propose l'accès à la plateforme LoRa Wavebricks, a du matériel électronique pour réaliser des objets connectés et du coaching durant le week-end.<br>- ITS Future et AGORA CALYCE mettent à disposition la plateforme cloud IoT Agora.<br> - Scalingo vous permettra d'héberger vos applications web !--></div>
 							</div>
 						</div>
 
