--- a/en/index.html
+++ b/en/index.html
@@ -222,7 +222,7 @@
 										<li>
 											<span class="icon-list-icon fa fa-hand-o-up" data-animation="bounceIn"></span>
 											<h4 class="icon-list-title">IDENTIFY THE CHALLENGES</h4>
-											<p>Every industry is confronted to problems. Let's imagine viable solutions and create the future of technology.</p>
+											<p>Every industry is facing problems. Let's imagine viable solutions and create the future of technology.</p>
 										</li>
 										<li>
 											<span class="icon-list-icon fa fa-heart-o" data-animation="bounceIn"></span>
@@ -1291,7 +1291,6 @@
 					<h2 class="section-heading text-center">FREQUENTLY ASKED QUESTIONS</h2>
 
 					<div class="faq-row row">
-
 						<div class="col-md-6">
 							<div class="faq-item">
 								<span class="faq-item-icon fa fa-question-circle"></span>
@@ -1303,10 +1302,10 @@
 						<div class="col-md-6">
 							<div class="faq-item">
 								<span class="faq-item-icon fa fa-question-circle"></span>
-								<h4 class="faq-item-heading">What is the current state of the project?</h4>
-								<div class="faq-item-text"> You can develop a project from scratch.</div>
+								<h4 class="faq-item-heading">Who suggests challenges?</h4>
+								<div class="faq-item-text">Anyone can can suggest a challenge or join one suggested by another attendee. Challenges are <a target="_blank" href="https://hic2018.sparkboard.com">listed on a Sparkboard</a> and pitched by their leader the Friday night.</div>
 							</div>
-						</div>
+						</div>						
 					</div>
 
 					<div class="faq-row row">
@@ -1321,8 +1320,8 @@
 						<div class="col-md-6">
 							<div class="faq-item">
 								<span class="faq-item-icon fa fa-question-circle"></span>
-								<h4 class="faq-item-heading">Who suggests challenges?</h4>
-								<div class="faq-item-text">Anyone can can suggest a challenge or join one suggested by another attendee. Challenges are <a target="_blank" href="https://hic2018.sparkboard.com">listed on a Sparkboard</a> and pitched by their leader the Friday night.</div>
+								<h4 class="faq-item-heading">What types of challenge can I pitch?</h4>
+								<div class="faq-item-text">You can pitch challenges related to any industry as long as it's not yet beyond the concept stage (meaning you didn't yet work on a solution).</div>
 							</div>
 						</div>
 					</div>
@@ -1340,7 +1339,7 @@
 							<div class="faq-item">
 								<span class="faq-item-icon fa fa-question-circle"></span>
 								<h4 class="faq-item-heading">What else do I need to know organization-wise?</h4>
-								<div class="faq-item-text">To confirm your registration, you will have to pay your meals. You can sleep in the venue, do not hesitate to bring an inflatable mattress and a nightcap.</div>
+								<div class="faq-item-text">To confirm your registration, you will have to pay your meals. You can sleep at the venue, do not hesitate to bring an inflatable mattress and a nightcap.</div>
 							</div>
 						</div>
 
