--- a/en/index.html
+++ b/en/index.html
@@ -92,6 +92,10 @@
 							<!--<li class="header-action-button"><a target="_blank" href="https://www.eventbrite.fr/e/billets-hacking-industry-camp-2017-36489834076" class="btn btn-primary">Registration</a></li>-->
 							<li class="header-action-button"><a target="_blank" href="http://hic2018.sparkboard.com" class="btn btn-primary">Challenges</a></li>
 							<li class="header-action-button"><a target="_blank" href="http://2017.hackingindustry.camp" class="btn btn-primary">2017 edition</a></li>
+							<a href="#" class="dropdown-toggle external language-choice" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-globe" style="font-size: 22px; vertical-align: -3px;"></i>&nbsp; EN <span class="caret"></span></a>
+							<ul class="dropdown-menu dropdown-language" role="menu">
+								<li><a href="/">FR</a></li>
+							</ul>
 						</ul>
 
 					</nav>
