--- a/en/index.html
+++ b/en/index.html
@@ -89,7 +89,7 @@
 							<!--<li><a href="#faq">FAQ</a></li>-->
 
 							<!-- HEADER ACTION BUTTON -->
-							<!--<li class="header-action-button"><a target="_blank" href="https://www.eventbrite.fr/e/billets-hacking-industry-camp-2017-36489834076" class="btn btn-primary">Registration</a></li>-->
+							<li class="header-action-button"><a target="_blank" href="https://www.eventbrite.fr/e/billets-hacking-industry-camp-2018-48193252315" class="btn btn-primary">Registration</a></li>
 							<li class="header-action-button"><a target="_blank" href="http://hic2018.sparkboard.com" class="btn btn-primary">Challenges</a></li>
 							<li class="header-action-button"><a target="_blank" href="http://2017.hackingindustry.camp" class="btn btn-primary">2017 edition</a></li>
 							<a href="#" class="dropdown-toggle external language-choice" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-globe" style="font-size: 22px; vertical-align: -3px;"></i>&nbsp; EN <span class="caret"></span></a>
@@ -241,11 +241,11 @@
 									</ul>
 		
 									<div class="hero-buttons col-md-12 text-center">
-										<!--<a href="planning.pdf" target="_blank" class="btn btn-lg btn-primary" style="margin-top: 20px;">Voir le planning</a>--><!--<a href="https://www.eventbrite.fr/e/billets-hacking-industry-camp-2017-36489834076" class="btn btn-lg btn-primary" style="margin-top: 20px;">J'y vais !</a>-->
+										<!--<a href="planning.pdf" target="_blank" class="btn btn-lg btn-primary" style="margin-top: 20px;">Voir le planning</a>--><a href="https://www.eventbrite.fr/e/billets-hacking-industry-camp-2018-48193252315" class="btn btn-lg btn-primary" style="margin-top: 20px;">I want to go!</a>
 										<!--<a href="#winners" class="btn btn-lg btn-primary" style="margin-top: 20px;">Les résultats</a>
 										<a href="https://www.facebook.com/media/set/?set=a.1860170557331117.1073741850.114361761912014&type=1&l=735a14f260" target="_blank" class="btn btn-lg btn-primary" style="margin-top: 20px;">Les photos</a>-->
 										<!--<a href="#about" class="btn btn-lg btn-primary" style="margin-top: 20px;">Découvrir</a>-->
-										<button disabled="disabled" class="btn btn-default">Registration available soon</button>
+										<!--<button disabled="disabled" class="btn btn-default">Registration available soon</button>-->
 									</div>
 
 								</div>
