--- a/index.html
+++ b/index.html
@@ -179,28 +179,32 @@
 								</div>
 							</div> -->
 
-							<!--<div class="newsbox col-md-10 col-md-offset-1">
-								<div style="font-size: 18px;color:#fff;padding-bottom: 10px;" class="text-center"><i class="fa fa-calendar"></i> &nbsp;Workshops de préparation les 07/09 et 14/09</div>
-								Pour cette troisième édition, <a href="http://www.rhenatic.eu/" target="_blank">Rhenatic</a> s’associe à <a href="http://alsacedigitale.org" target="_blank">Alsace Digitale</a> pour créer des <strong>workshops</strong> en amont du Hacking Industry Camp.<br>
-								Deux sessions d’idéation de deux demi-journées, animées par la société Xfives sont proposées.<br>
-								L’idée est de transformer vos problématiques en défis prêts à être lancés le temps d’un week-end.<br><br>
+							<div class="newsbox col-md-10 col-md-offset-1">
+								<div style="font-size: 18px;color:#fff;padding-bottom: 10px;" class="text-center"><i class="fa fa-calendar"></i> &nbsp;Workshops de préparation les 19/09 et 27/09</div>
+								Deux sessions d’idéation de deux demi-journées pour transformer vos problématiques en défis !<br><br>
 								<div class="row" style="margin-bottom: 15px;">
 									<div class="col-md-6">
-										<a class="btn btn-default" disabled="disabled" style="width: 100%;" href="https://www.eventbrite.com/e/workshop-hic-saison-1-episode-1-tickets-36611875104" target="_blank">07/09 à 9h à la Fédération des Industries d'Alsace</a>
+										<a class="btn btn-default" style="width: 100%;" href="https://www.eventbrite.fr/e/billets-workshop-hic-conception-inventive-saison-1-episode-1-49932448297" target="_blank">19/09 à 9h Chez ES Gaz de Strasbourg</a>
 									</div>
 									<div class="col-md-6">
-										<a class="btn btn-default" disabled="disabled" style="width: 100%;" href="https://www.eventbrite.com/e/workshop-hic-saison-2-episode-1-tickets-37289096692" target="_blank">07/09 à 17h chez Hager</a>
+										<a class="btn btn-default" style="width: 100%;" href="https://www.eventbrite.fr/e/billets-workshop-conception-inventive-hic-saison-2-episode-1-49932506471" target="_blank">19/09 à 17h chez Socomec</a>
 									</div>
 								</div>
 								<div class="row">
 									<div class="col-md-6">
-										<a class="btn btn-default" style="width: 100%;" href="https://www.eventbrite.com/e/workshop-hic-saison-1-episode-2-tickets-37289341424" target="_blank">14/09 à 9h chez és</a>
+										<a class="btn btn-default" style="width: 100%;" href="https://www.eventbrite.fr/e/billets-workshop-hic-conception-inventive-saison-1-episode-2-fren-49933545579" target="_blank">27/09 à 9h à La Plage Digitale</a>
 									</div>
 									<div class="col-md-6">
-										<a class="btn btn-default" style="width: 100%;" href="https://www.eventbrite.fr/e/billets-workshop-hic-saison-2-episode-2-37289498895">14/09 à 17h chez Socomec</a>
+										<a class="btn btn-default" style="width: 100%;" href="https://www.eventbrite.fr/e/billets-workshop-hic-conception-inventive-saison-2-episode-2-49933724113" target="_blank">27/09 à 17h au CCN</a>
 									</div>
 								</div>
-							</div>-->
+								<div class="row">
+									<div class="col-md-12">
+										<br>Et pour aller plus loin, découvrez les méthodes agiles SCRUM avec des LEGOs grâce à Sogeti...<br><br>
+										<a class="btn btn-default" style="width: 100%;" href="https://www.eventbrite.fr/e/billets-workshop-lego-for-scrum-49934152394" target="_blank">Workshop Lego for SCRUM le 25/09 à 17h Sogeti</a>
+									</div>
+								</div>
+							</div>
 
 							<div class="hero-features row" style="margin-top: 45px;">
 
