--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
 							<li><a href="#keynotes">Keynotes</a></li>
 							<li><a href="#coachs">Coachs &amp; Jury</a>
 							<li><a href="#prizes">Prix</a>
-							<li><a href="#winners">Résultats</a>
-							<li><a href="#sponsors">Partenaires</a></li>-->
+							<li><a href="#winners">Résultats</a>-->
+							<li><a href="#sponsors">Partenaires</a></li>
 							<!--<li><a href="#faq">FAQ</a></li>-->
 
 							<!-- HEADER ACTION BUTTON -->
@@ -1206,7 +1206,7 @@
 
 			<!-- SPONSORS
 			================================= -->
-			<!--<section id="sponsors" class="section-dark section" style="padding-bottom: 30px; padding-top: 30px;">
+			<section id="sponsors" class="section-dark section" style="padding-bottom: 30px; padding-top: 30px;">
 
 				<div class="section-background">
 
@@ -1239,8 +1239,8 @@
 						<a href="http://www.rhenatic.eu/" target="_blank"><img src="images/contents/rhenatic.png" alt="Rhénatic" style="width: 180px;"></a>
 						<a href="http://www.strataggem.com/" target="_blank" style="background: white; padding: 15px;"><img src="images/contents/strataggem.png" alt="Strataggem"></a>
 						<a href="http://www.insa-strasbourg.fr/" target="_blank"><img src="images/contents/insa.png" alt="INSA Strasbourg"></a>
-						<a href="http://www.alsacechampagneardennelorraine.eu/" target="_blank"><img src="images/contents/regiongrandest.png" alt="Région Grand Est"></a>
-						<a href="https://www.interregeurope.eu/" target="_blank"><img src="images/contents/interreg.jpg" alt="Interreg Europe"></a>
+						<!--<a href="http://www.alsacechampagneardennelorraine.eu/" target="_blank"><img src="images/contents/regiongrandest.png" alt="Région Grand Est"></a>
+						<a href="https://www.interregeurope.eu/" target="_blank"><img src="images/contents/interreg.jpg" alt="Interreg Europe"></a>-->
 					</div>
 
 					<div class="sponsors-row" data-animation="bounceIn">
@@ -1249,7 +1249,7 @@
 						<a href="https://its-future.com/" target="_blank"><img src="images/contents/its.png" alt="its future"></a>
 						<a href="http://www.agoracalyce.com/" target="_blank"><img src="images/contents/agora.png" alt="Agora Calycé"></a>
 						<a href="https://www.thurmelec.fr/" target="_blank"><img src="images/contents/thurmelec.jpg" alt="thurmelec"></a>
-
+						<a href="https://www.orange.fr/" target="_blank"><img src="images/contents/orange.png" alt="orange"></a>
 					</div>
 					
 					<div class="sponsors-row" data-animation="bounceIn">
@@ -1266,28 +1266,28 @@
 						<a href="http://www.xfive.be/" target="_blank"><img src="images/contents/xfive.jpg" alt="XFive"></a>
 						<a href="http://cpc-analytics.fr" target="_blank"><img src="images/contents/cpc-analytics.jpg" alt="Cpc Analytics"></a>
 						<a href="http://duipi.unistra.fr/" target="_blank"><img src="images/contents/ipi.png" alt="IPI"></a>
-						<a href="http://innovationweek.org/france/" target="_blank"><img src="images/contents/innoweek.png" alt="Innoweek"></a>
+						<!--<a href="http://innovationweek.org/france/" target="_blank"><img src="images/contents/innoweek.png" alt="Innoweek"></a>-->
 						<a href="http://marque.alsace/" target="_blank"><img src="images/contents/acoeur.png" alt="Marque Alsace"></a>
 						<a href="http://www.strasbourgaimesesetudiants.eu/" target="_blank"><img src="images/contents/strasbourg-etudiants.png" alt="Strasbourg aime ses étudiants"></a>
 						<a href="http://alsacalcul.unistra.fr/" target="_blank"><img src="images/contents/alsacalcul.jpg" alt="Alsa Calcul"></a>
 						<a href="http://www.conectus.fr/" target="_blank"><img style="background: white; height: 90px; padding: 5px;" src="images/contents/satt.png" alt="satt connectus"></a>
-						<a href="https://www.federation-industries-alsace.com/" target="_blank"><img style="background: white; height: 90px; padding: 5px;" src="images/contents/fia.png" alt="fia"></a>
-						<a href="http://prglobalmedia.com/" target="_blank" style="background: white; padding: 0 5px;"><img src="images/contents/prglobalmedia.png" alt="PR Global Media"></a>
+						<!--<a href="https://www.federation-industries-alsace.com/" target="_blank"><img style="background: white; height: 90px; padding: 5px;" src="images/contents/fia.png" alt="fia"></a>
+						<a href="http://prglobalmedia.com/" target="_blank" style="background: white; padding: 0 5px;"><img src="images/contents/prglobalmedia.png" alt="PR Global Media"></a>-->
 						<a href="http://http://epitech.eu/" target="_blank"><img style="background: white; height: 90px; padding: 5px;" src="images/contents/epitech.png" alt="Epitech"></a>
 						<a href="http://www.reck.fr/" target="_blank"><img src="images/contents/cafe-reck.jpg" alt="Cafés Reck"></a>
 					</div>
 
-					<div class="sponsors-row" data-animation="bounceIn">
+					<!--<div class="sponsors-row" data-animation="bounceIn">
 						<h3 style="font-size: 17px;"></h3><br>
 						<div class="row">
 							<p>Intéressés pour devenir sponsor ?</p>
 
 							<a target="_blank" href="https://drive.google.com/open?id=0B0S2y3rk51DNRnJrRGNRV1h1OUU" class="btn btn-primary">Présentation HIC</a> &nbsp; <a target="_blank" href="https://drive.google.com/open?id=0B0S2y3rk51DNQnJuZldfaFdHMlU" class="btn btn-primary">Devenir sponsor</a>
 						</div>
-					</div>
+					</div>-->
 
 				</div>
-			</section>-->
+			</section>
 
 			<!-- FAQ
 			================================= -->
