--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 								Deux sessions d’idéation de deux demi-journées pour transformer vos problématiques en défis !<br><br>
 								<div class="row" style="margin-bottom: 15px;">
 									<div class="col-md-6">
-										<a class="btn btn-default" style="width: 100%;" href="https://www.eventbrite.fr/e/billets-workshop-hic-conception-inventive-saison-1-episode-1-49932448297" target="_blank">19/09 à 9h Chez ES Gaz de Strasbourg</a>
+										<a class="btn btn-default" style="width: 100%;" href="https://www.eventbrite.fr/e/billets-workshop-hic-conception-inventive-saison-1-episode-1-49932448297" target="_blank">19/09 à 9h Chez ES</a>
 									</div>
 									<div class="col-md-6">
 										<a class="btn btn-default" style="width: 100%;" href="https://www.eventbrite.fr/e/billets-workshop-conception-inventive-hic-saison-2-episode-1-49932506471" target="_blank">19/09 à 17h chez Socomec</a>
