--- a/index.html
+++ b/index.html
@@ -204,7 +204,23 @@
 										<a class="btn btn-default" style="width: 100%;" href="https://www.eventbrite.fr/e/billets-workshop-lego-for-scrum-49934152394" target="_blank">Workshop Lego for SCRUM le 25/09 à 17h Sogeti</a>
 									</div>
 								</div>
+								<div style="font-size: 18px;color:#fff;padding-top: 30px;" class="text-center"><i class="fa fa-video-camera"></i> &nbsp;Les Webinars, tous les jeudis !</div><br>
+								<div class="row webinars" style="margin-bottom: 15px;">
+									<div class="col-md-3">
+										<a class="btn btn-default" style="width: 100%;" href="https://www.eventbrite.fr/e/billets-webinar1-hic-bonnes-pratiques-pour-deployer-une-appli-en-toute-conformite-50264608798" target="_blank">20/09 à 13h<br><span>Déployer une application en toute conformité</span></a>
+									</div>
+									<div class="col-md-3">
+										<a class="btn btn-default" style="width: 100%;" href="https://www.eventbrite.fr/e/billets-webinar2-hic-a-quoi-sert-une-plateforme-iot-50345792621" target="_blank">27/09 à 12h<br><span>A quoi sert une plateforme Iot ?</span></a>
+									</div>
+									<div class="col-md-3">
+										<a class="btn btn-default" style="width: 100%;" href="https://www.eventbrite.fr/e/billets-webinar3-hic-les-technologies-de-transmission-de-donnees-ex-de-lora-50345866843" target="_blank">04/10 à 12h<br><span>Transmission de données sur le réseau LoRa</span></a>
+									</div>
+									<div class="col-md-3">
+										<a class="btn btn-default" style="width: 100%;" href="https://www.eventbrite.fr/e/billets-webinar4-hic-la-blockchain-a-quoi-sert-elle-vraiment-50345989209" target="_blank">11/19 à 12h<br><span>A quoi sert vraiment la Blockchain ?</span></a>
+									</div>
+								</div>
 							</div>
+								
 
 							<div class="hero-features row" style="margin-top: 45px;">
 
