--- a/index.html
+++ b/index.html
@@ -1253,7 +1253,7 @@
 						<a href="http://www.caisse-epargne.fr/" target="_blank"><img src="images/contents/caisse-epargne.jpg" alt="Caisse d'Epargne Alsace"></a>						
 						<a href="http://www.hagergroup.com/" target="_blank"><img src="images/contents/hager-group.png" alt="Hager"></a>				
 						<a href="http://www.rhenatic.eu/" target="_blank"><img src="images/contents/rhenatic.png" alt="Rhénatic" style="width: 180px;"></a>
-						<a href="http://www.strataggem.com/" target="_blank" style="background: white; padding: 15px;"><img src="images/contents/strataggem.png" alt="Strataggem"></a>
+						<a href="http://www.strataggem.com/" target="_blank" style="background: white; padding: 8px;"><img src="images/contents/strataggem.png" alt="Strataggem"></a>
 						<a href="http://www.insa-strasbourg.fr/" target="_blank"><img src="images/contents/insa.png" alt="INSA Strasbourg"></a>
 						<!--<a href="http://www.alsacechampagneardennelorraine.eu/" target="_blank"><img src="images/contents/regiongrandest.png" alt="Région Grand Est"></a>
 						<a href="https://www.interregeurope.eu/" target="_blank"><img src="images/contents/interreg.jpg" alt="Interreg Europe"></a>-->
@@ -1266,6 +1266,7 @@
 						<a href="http://www.agoracalyce.com/" target="_blank"><img src="images/contents/agora.png" alt="Agora Calycé"></a>
 						<a href="https://www.thurmelec.fr/" target="_blank"><img src="images/contents/thurmelec.jpg" alt="thurmelec"></a>
 						<a href="https://www.orange.fr/" target="_blank"><img src="images/contents/orange.png" alt="orange"></a>
+						<a href="https://fr.rs-online.com/web/" target="_blank"><img src="images/contents/rs.png" alt="rs"></a>
 					</div>
 					
 					<div class="sponsors-row" data-animation="bounceIn">
