--- a/index.html
+++ b/index.html
@@ -184,10 +184,10 @@
 								Deux sessions d’idéation de deux demi-journées pour transformer vos problématiques en défis !<br><br>
 								<div class="row" style="margin-bottom: 15px;">
 									<div class="col-md-6">
-										<a class="btn btn-default" style="width: 100%;" href="https://www.eventbrite.fr/e/billets-workshop-hic-conception-inventive-saison-1-episode-1-49932448297" target="_blank">19/09 à 9h Chez ES</a>
+										<a class="btn btn-default disabled" style="width: 100%;" href="https://www.eventbrite.fr/e/billets-workshop-hic-conception-inventive-saison-1-episode-1-49932448297" target="_blank">19/09 à 9h Chez ES</a>
 									</div>
 									<div class="col-md-6">
-										<a class="btn btn-default" style="width: 100%;" href="https://www.eventbrite.fr/e/billets-workshop-conception-inventive-hic-saison-2-episode-1-49932506471" target="_blank">19/09 à 17h chez Socomec</a>
+										<a class="btn btn-default disabled" style="width: 100%;" href="https://www.eventbrite.fr/e/billets-workshop-conception-inventive-hic-saison-2-episode-1-49932506471" target="_blank">19/09 à 17h chez Socomec</a>
 									</div>
 								</div>
 								<div class="row">
@@ -195,15 +195,15 @@
 										<a class="btn btn-default" style="width: 100%;" href="https://www.eventbrite.fr/e/billets-workshop-hic-conception-inventive-saison-1-episode-2-fren-49933545579" target="_blank">27/09 à 9h à La Plage Digitale</a>
 									</div>
 									<div class="col-md-6">
-										<a class="btn btn-default" style="width: 100%;" href="https://www.eventbrite.fr/e/billets-workshop-hic-conception-inventive-saison-2-episode-2-49933724113" target="_blank">27/09 à 17h au CCN</a>
+										<a class="btn btn-default" style="width: 100%;" href="https://www.eventbrite.fr/e/billets-workshop-hic-conception-inventive-saison-2-episode-2-49933724113" target="_blank">27/09 à 17h à La Plage Digitale</a>
 									</div>
 								</div>
-								<div class="row">
+								<!--<div class="row">
 									<div class="col-md-12">
 										<br>Et pour aller plus loin, découvrez les méthodes agiles SCRUM avec des LEGOs grâce à Sogeti...<br><br>
 										<a class="btn btn-default" style="width: 100%;" href="https://www.eventbrite.fr/e/billets-workshop-lego-for-scrum-49934152394" target="_blank">Workshop Lego for SCRUM le 25/09 à 17h Sogeti</a>
 									</div>
-								</div>
+								</div>-->
 								<div style="font-size: 18px;color:#fff;padding-top: 30px;" class="text-center"><i class="fa fa-video-camera"></i> &nbsp;Les Webinars</div><br>
 								<div class="row webinars" style="margin-bottom: 15px;">
 									<div class="col-md-3">
@@ -1255,6 +1255,7 @@
 						<a href="http://www.rhenatic.eu/" target="_blank"><img src="images/contents/rhenatic.png" alt="Rhénatic" style="width: 180px;"></a>
 						<a href="http://www.strataggem.com/" target="_blank" style="background: white; padding: 8px;"><img src="images/contents/strataggem.png" alt="Strataggem"></a>
 						<a href="http://www.insa-strasbourg.fr/" target="_blank"><img src="images/contents/insa.png" alt="INSA Strasbourg"></a>
+						<a href="https://www.orange.fr/" target="_blank"><img src="images/contents/orange.png" alt="orange"></a>
 						<!--<a href="http://www.alsacechampagneardennelorraine.eu/" target="_blank"><img src="images/contents/regiongrandest.png" alt="Région Grand Est"></a>
 						<a href="https://www.interregeurope.eu/" target="_blank"><img src="images/contents/interreg.jpg" alt="Interreg Europe"></a>-->
 					</div>
@@ -1265,8 +1266,9 @@
 						<a href="https://its-future.com/" target="_blank"><img src="images/contents/its.png" alt="its future"></a>
 						<a href="http://www.agoracalyce.com/" target="_blank"><img src="images/contents/agora.png" alt="Agora Calycé"></a>
 						<a href="https://www.thurmelec.fr/" target="_blank"><img src="images/contents/thurmelec.jpg" alt="thurmelec"></a>
-						<a href="https://www.orange.fr/" target="_blank"><img src="images/contents/orange.png" alt="orange"></a>
 						<a href="https://fr.rs-online.com/web/" target="_blank"><img src="images/contents/rs.png" alt="rs"></a>
+						<a href="http://technologyandstrategy.group/" target="_blank"><img src="images/contents/ts.jpg" alt="ts"></a>
+						<a href="https://www.soprasteria.com/" target="_blank"><img src="images/contents/sopra.jpg" alt="sopra steria"></a>
 					</div>
 					
 					<div class="sponsors-row" data-animation="bounceIn">
