--- a/index.html
+++ b/index.html
@@ -1280,7 +1280,7 @@
 						<a href="http://www.lafrenchtech-alsace.eu/" target="_blank"><img style="height: 150px;" src="images/contents/fta2.png" alt="La French Tech Alsace"></a>
 						<a href="http://alsace.cci.fr/" target="_blank"><img src="images/contents/ccialsace.jpg" alt="CCI Alsace"></a>
 						<a href="http://adira.com/" target="_blank"><img src="images/contents/adira.png" alt="Adira"></a>
-						<a href="http://www.alsaceinnovation.eu/" target="_blank"><img src="images/contents/alsaceinnovation.png" alt="Adira"></a>
+						<a href="https://www.grandenov.fr/" target="_blank"><img src="images/contents/grandenov.png" style="background: white;" alt="Grand E-nov"></a>
 						<a href="http://maddyness.com/" target="_blank"><img src="images/contents/maddyness.jpg" alt="Maddyness"></a>
 						<a href="http://www.xfive.be/" target="_blank"><img src="images/contents/xfive.jpg" alt="XFive"></a>
 						<a href="http://cpc-analytics.fr" target="_blank"><img src="images/contents/cpc-analytics.jpg" alt="Cpc Analytics"></a>
@@ -1294,6 +1294,7 @@
 						<a href="http://prglobalmedia.com/" target="_blank" style="background: white; padding: 0 5px;"><img src="images/contents/prglobalmedia.png" alt="PR Global Media"></a>-->
 						<a href="http://http://epitech.eu/" target="_blank"><img style="background: white; height: 90px; padding: 5px;" src="images/contents/epitech.png" alt="Epitech"></a>
 						<a href="http://www.reck.fr/" target="_blank"><img src="images/contents/cafe-reck.jpg" alt="Cafés Reck"></a>
+						<a href="https://sciencemeup.com/" target="_blank"><img src="images/contents/sciencemeup.png" alt="Science Me Up"></a>
 					</div>
 
 					<!--<div class="sponsors-row" data-animation="bounceIn">
