--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 							</div> -->
 
 							<div class="newsbox col-md-10 col-md-offset-1">
-								<div style="font-size: 18px;color:#fff;padding-bottom: 10px;" class="text-center"><i class="fa fa-calendar"></i> &nbsp;Workshops de préparation les 19/09 et 27/09</div>
+								<!--<div style="font-size: 18px;color:#fff;padding-bottom: 10px;" class="text-center"><i class="fa fa-calendar"></i> &nbsp;Workshops de préparation les 19/09 et 27/09</div>
 								Deux sessions d’idéation de deux demi-journées pour transformer vos problématiques en défis !<br><br>
 								<div class="row" style="margin-bottom: 15px;">
 									<div class="col-md-6">
@@ -197,20 +197,20 @@
 									<div class="col-md-6">
 										<a class="btn btn-default" style="width: 100%;" href="https://www.eventbrite.fr/e/billets-workshop-hic-conception-inventive-saison-2-episode-2-49933724113" target="_blank">27/09 à 17h à La Plage Digitale</a>
 									</div>
-								</div>
+								</div>-->
 								<!--<div class="row">
 									<div class="col-md-12">
 										<br>Et pour aller plus loin, découvrez les méthodes agiles SCRUM avec des LEGOs grâce à Sogeti...<br><br>
 										<a class="btn btn-default" style="width: 100%;" href="https://www.eventbrite.fr/e/billets-workshop-lego-for-scrum-49934152394" target="_blank">Workshop Lego for SCRUM le 25/09 à 17h Sogeti</a>
 									</div>
 								</div>-->
-								<div style="font-size: 18px;color:#fff;padding-top: 30px;" class="text-center"><i class="fa fa-video-camera"></i> &nbsp;Les Webinars</div><br>
+								<div style="font-size: 18px;color:#fff;padding-top: 8px;" class="text-center"><i class="fa fa-video-camera"></i> &nbsp;Découvrez les Webinars, pour approfondir vos connaissances avant le HIC !</div><br>
 								<div class="row webinars" style="margin-bottom: 15px;">
 									<div class="col-md-3">
-										<a class="btn btn-default" style="width: 100%;" href="https://www.eventbrite.fr/e/billets-webinar2-hic-a-quoi-sert-une-plateforme-iot-50345792621" target="_blank">27/09 à 12h<br><span>A quoi sert une plateforme Iot ?</span></a>
+										<a class="btn btn-default disabled" style="width: 100%;" href="https://www.eventbrite.fr/e/billets-webinar2-hic-a-quoi-sert-une-plateforme-iot-50345792621" target="_blank">27/09 à 12h<br><span>A quoi sert une plateforme Iot ?</span></a>
 									</div>
 									<div class="col-md-3">
-										<a class="btn btn-default" style="width: 100%;" href="https://www.eventbrite.fr/e/billets-webinar1-hic-bonnes-pratiques-pour-deployer-une-appli-en-toute-conformite-50264608798" target="_blank">02/10 à 12h<br><span>Déployer une application en toute conformité</span></a>
+										<a class="btn btn-default" style="width: 100%;" href="https://www.eventbrite.fr/e/billets-webinar1-hic-bonnes-pratiques-pour-deployer-une-appli-en-toute-conformite-50264608798" target="_blank">02/10 à 12h<br><span> Pourquoi sécuriser mon projet d'Industrie 4.0</span></a>
 									</div>
 									<div class="col-md-3">
 										<a class="btn btn-default" style="width: 100%;" href="https://www.eventbrite.fr/e/billets-webinar3-hic-les-technologies-de-transmission-de-donnees-ex-de-lora-50345866843" target="_blank">04/10 à 12h<br><span>Transmission de données sur le réseau LoRa</span></a>
