--- a/index.html
+++ b/index.html
@@ -1295,6 +1295,8 @@
 						<a href="http://http://epitech.eu/" target="_blank"><img style="background: white; height: 90px; padding: 5px;" src="images/contents/epitech.png" alt="Epitech"></a>
 						<a href="http://www.reck.fr/" target="_blank"><img src="images/contents/cafe-reck.jpg" alt="Cafés Reck"></a>
 						<a href="https://sciencemeup.com/" target="_blank"><img src="images/contents/sciencemeup.png" alt="Science Me Up"></a>
+						<a href="https://www.eifer.kit.edu/" target="_blank"><img src="images/contents/eifer.png" style="background: #fff" alt="Eifer"></a>
+						<a href="https://www.edf.fr/" target="_blank"><img src="images/contents/edf.png" alt="EDF"></a>
 					</div>
 
 					<!--<div class="sponsors-row" data-animation="bounceIn">
