--- a/index.html
+++ b/index.html
@@ -1434,8 +1434,8 @@
 					</h3>					
 					
 					<div style="display: block; margin-bottom: 40px; font-size: 18px;">
-						<a href="https://drive.google.com/file/d/1j-l3JHPOevdKIlTub1AjhZm5dKnm9mHa/view?usp=sharing" target="_blank">Communiqué de presse</a><!-- - 
-						<a href="https://drive.google.com/open?id=0B0S2y3rk51DNdTlWNGpmSWFNR3M" target="_blank">Dossier de presse</a>-->
+						<a href="https://drive.google.com/file/d/1j-l3JHPOevdKIlTub1AjhZm5dKnm9mHa/view?usp=sharing" target="_blank">Communiqué de presse</a> - 
+						<a href="https://drive.google.com/open?id=0B0S2y3rk51DNZ1BFNFI4cWFWUjQ2aThUblRBaVl5OWM3RmVv" target="_blank">Dossier de presse</a>
 					</div>
 
 					<div class="footer-socmed">						
