--- a/index.html
+++ b/index.html
@@ -1269,6 +1269,7 @@
 						<a href="https://fr.rs-online.com/web/" target="_blank"><img src="images/contents/rs.png" alt="rs"></a>
 						<a href="http://technologyandstrategy.group/" target="_blank"><img src="images/contents/ts.jpg" alt="ts"></a>
 						<a href="https://www.soprasteria.com/" target="_blank"><img src="images/contents/sopra.jpg" alt="sopra steria"></a>
+						<a href="https://www.fr.sogeti.com/" target="_blank"><img src="images/contents/sogeti.jpg" alt="sogeti"></a>
 					</div>
 					
 					<div class="sponsors-row" data-animation="bounceIn">
